--- a/bitrix/templates/atwebsite_stroy_tmpl/css/slick.css
+++ b/bitrix/templates/atwebsite_stroy_tmpl/css/slick.css
@@ -2,20 +2,15 @@
 /* Slider */
 
 /* Arrows */
-.slick-prev,
-.slick-next
+.slick-prev,.slick-next
 {
-
     font-size: 0;
     line-height: 0;
-
     position: absolute;
-    top: -35px;
-
+    top: -28px;
     display: block;
-
     width: 60px;
-    height: 45px;
+    height: 25px;
     padding: 0;
     -webkit-transform: translate(0, -50%);
     -ms-transform: translate(0, -50%);
