--- a/bitrix/templates/atwebsite_stroy_tmpl/components/bitrix/news.list/documents/style.css
+++ b/bitrix/templates/atwebsite_stroy_tmpl/components/bitrix/news.list/documents/style.css
@@ -2,7 +2,8 @@
     padding-bottom: 20px;
 }
 
-.documents .doc-list {
+.our-difference .slider-list{
+    overflow: inherit !important;
 }
 
 .documents .doc-list .doc-item {
